# FlightSimulator

./: .gitmodules  CMakeLists.txt  README.md
FlightSimulator/: CMakeLists.txt  data.h  flightmodel.cpp  flightmodel.h  gl_shaders.cpp  gl_shaders.h  main.cpp  material.cpp  material.h  physics.cpp  physics.h  scene.cpp  scene.h  shaders.metal  view.cpp  view.h
FlightSimulator/assets/models/: cube.ply  fuselage.ply  icosphere.ply  propeller.ply
FlightSimulator/assets/textures/terrain/: terrain_set1.json  terrain_set2.json
glew/: CMakeLists.txt
